# Rutar

./: .gitignore  MONACO_TODO.md  P2-7-PLAN.md  README.md  README_CN.md  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: foco-plan-orphan-agent-attempts.md
scripts/: bench-startup.ts  build-macos-local-dmg.sh  register-macos-file-associations.sh
src/: App.test.ts  App.tsx  i18n.test.ts  i18n.ts  index.css  index.css.test.js  main.tsx  tauriConfig.test.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  constants.rs  diff.rs  document.rs  editing.rs  editing_commands.rs  file_io.rs  file_io_commands.rs  formatting.rs  outline.rs  path_search.rs  path_search_commands.rs  search.rs  search_commands.rs  settings.rs  syntax.rs  text_utils.rs  translation.rs  types.rs
src-tauri/src/commands/config/: mod.rs  profile.rs  windows_integration.rs
src-tauri/src/commands/outline/: c_family.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  php.rs  python.rs  rust_lang.rs  swift.rs  typescript.rs
src-tauri/src/commands/search/: byte_index.rs  session_cache.rs
src/components/: BookmarkSidebar.test.tsx  BookmarkSidebar.tsx  ContentTreeSidebar.tsx  DiffEditor.monaco.test.tsx  DiffEditor.test.ts  DiffEditor.tsx  DiffEditorContextMenus.tsx  DiffEditorHeader.tsx  DiffEditorPanels.tsx  DiffPanelView.tsx  Editor.component.test.tsx  Editor.monaco.test.tsx  Editor.test.ts  Editor.tsx  Editor.types.ts  EditorBackdropLayer.tsx  EditorBase64DecodeToast.tsx  EditorContextMenu.tsx  EditorInputLayer.tsx  EditorLineNumberGutter.tsx  EditorView.tsx  GoToLineModal.test.tsx  GoToLineModal.tsx  HistoryDropdownInput.tsx  MarkdownPreviewPanel.test.tsx  MarkdownPreviewPanel.tsx  MarkdownToolbar.test.tsx  MarkdownToolbar.tsx  OutlineSidebar.test.tsx  OutlineSidebar.tsx  QuickFindOverlay.test.tsx  QuickFindOverlay.tsx  SearchReplacePanel.test.tsx  SearchReplacePanel.tsx  SettingsModal.test.tsx  SettingsModal.tsx  Sidebar.test.tsx  Sidebar.tsx  StatusBar.test.tsx  StatusBar.tsx  (+86 more)
src/components/search-panel/: CrossFileReplaceDialog.tsx  CrossFileResultsPanel.test.tsx  CrossFileResultsPanel.tsx  FilterRulesEditor.tsx  ModeButton.tsx  SearchInputContextMenu.tsx  SearchPanelHeader.tsx  SearchPanelOverlays.tsx  SearchQuerySection.tsx  SearchResultItems.tsx  SearchResultsPanel.tsx  SearchSidebarBody.tsx  SearchSidebarChrome.tsx  SearchTargetRow.test.tsx  SearchTargetRow.tsx  applyFilterSessionRestoreResult.ts  applySearchPanelCountResults.ts  applySearchPanelCursorStepResult.ts  applySearchPanelErrorMessage.ts  applySearchPanelFirstMatchResult.ts  applySearchPanelLoadMoreSessionResults.ts  applySearchPanelNavigationSelection.ts  applySearchPanelReplaceSearchGuard.ts  applySearchPanelReplaceSuccessEffects.ts  applySearchPanelResolvedReplaceAllResult.ts  applySearchPanelResolvedReplaceCurrentResult.ts  applySearchPanelResultFilterSelection.ts  applySearchPanelResultFilterStepSuccess.ts  applySearchPanelRunResults.ts  applySearchSessionRestoreResult.ts  attemptSearchPanelSessionStart.ts  backendGuards.ts  buildSearchPanelRestoreRequests.ts  buildSearchPanelRunRequests.ts  createSearchPanelRunResults.ts  crossFileTarget.test.ts  crossFileTarget.ts  finalizeSearchPanelRestoreCycle.ts  index.ts  loadMoreSearchPanelStepMatches.ts  (+76 more)
src/hooks/: useFolderWatch.ts  useMouseGestures.ts  useResizableSidebarWidth.test.tsx  useResizableSidebarWidth.ts  useResizeObserver.test.tsx  useResizeObserver.ts  useSingleInstance.ts
src/lib/: bookmarks.test.ts  bookmarks.ts  clipboard.ts  closeConfirm.test.ts  closeConfirm.ts  contentTree.ts  dayjs-mermaid-shim.test.ts  dayjs-mermaid-shim.ts  documentEvents.ts  documentText.ts  editorFind.ts  focoPlanAttemptReconciliation.test.ts  focoPlanAttemptReconciliation.ts  goToLineDialog.ts  i18nToolbarFormat.ts  markdown.test.ts  markdown.ts  markdownPaths.ts  markdownPreviewHighlight.test.ts  markdownPreviewHighlight.ts  markdownToolbar.test.ts  markdownToolbar.ts  markdownToolbarShortcuts.test.ts  markdownToolbarShortcuts.ts  monacoTextSnapshot.test.ts  monacoTextSnapshot.ts  mouseGestures.test.ts  mouseGestures.ts  openFile.test.ts  openFile.ts  outline.test.ts  outline.ts  pairOffsets.ts  pathUtils.test.ts  pathUtils.ts  perf-mark.test.ts  perf-mark.ts  quickFind.ts  recentPaths.test.ts  recentPaths.ts  (+13 more)
src/lib/monaco/: boot.ts  language.ts  minimap.ts  setupMonaco.test.ts  setupMonaco.ts  theme.ts  wrapping.ts
src/store/: storeTypes.ts  useStore.test.ts  useStore.ts
src/types/: mermaid-core.d.ts  prismjs.d.ts
