[package]
name = "rutar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rutar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ropey = "1.6"
memmap2 = "0.9"
encoding_rs = "0.8"
chardetng = "0.1"
anyhow = "1.0"
dashmap = "6.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tauri-plugin-dialog = "2.6.0"
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-json = "0.23"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.23.2"
tree-sitter-bash = "0.23.3"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-xml = "0.7.0"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"


